--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -40,7 +40,10 @@
             height: 100%
         }
     }
-    
+    .tooltip {
+                font-size: 80%;
+                line-height: normal;
+            }
     #lmcu-calculator {
         ul {
             list-style-type: none;
@@ -363,6 +366,8 @@
                                         @include make-col-ready(0);
                                         @include make-col(12);
                                         #message {
+                                            font-size: 14px;
+                                        
                                             @include media-breakpoint-up(md) {
                                                 @include make-col-ready(0);
                                                 @include make-col(8);
@@ -476,11 +481,13 @@
                 @include ml(auto);
             }
         }
+                    
         #consolidation {
             h6 {
                 font-weight: 800;
                 @include mb(1);
             }
+
             .header-row {
                 font-weight: 600;
                 @include mb(3);
@@ -498,6 +505,16 @@
                 input,
                 select {
                     @extend .form-control;
+                    padding: 0.375rem;
+                    @include media-breakpoint-up(md) {
+                     padding:0.375rem 0.75rem;
+                    }
+                }
+                label {
+                    font-size: 90%;
+                    @include media-breakpoint-up(md) {
+                     font-size: 100%;   
+                    }
                 }
                 .type {
                     @include make-col-ready();
@@ -559,17 +576,14 @@
                 @extend .border-top;
                 .repayment-calc-label {
                     @include make-col-ready();
-                    @include make-col(8);
-   
+                    @include make-col(12);
+                           @include media-breakpoint-up(md) {
+                            @include make-col(8);
+                        }
                     padding-right: 5px;
                     padding-left: 5px;
                     display: flex;
                     flex-direction: column;
-                    label {
-                        @include my(auto);
-                        font-weight: 800;
-                        color: #333;
-                    }
                     p {
                         @extend .small;
                         @extend .text-muted;
@@ -577,15 +591,36 @@
                 }
                 .repayment-calc-total {
                     @include make-col-ready();
-                    @include make-col(3);
+                    @include make-col(5);
+                    @include mt(3);
+                      @include media-breakpoint-up(md) {
+                            @include make-col(3);
+                          @include mt(0);
+                        }
                     padding-right: 5px;
                     padding-left: 5px;
+                }
+            }
+            .mobile-btn-row {
+                 @include make-col-ready();
+                    @include make-col(12);
+                padding: 0 5px;
+                @include mt(4);
+                @include media-breakpoint-up(md) {
+                          display: none;
+                        }
+                a {
+                    @extend .btn;
+                    @extend .btn-secondary;
                 }
             }
         }
     }
 #infoLegal {
+    
+    @include make-container();
     ul {
+        font-size: 14px;
     list-style-type: inherit;
         margin-left: 1.5rem;
     li {
