--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -40,10 +40,12 @@
             height: 100%
         }
     }
+    
     .tooltip {
-                font-size: 80%;
-                line-height: normal;
-            }
+        font-size: 80%;
+        line-height: normal;
+    }
+    
     #lmcu-calculator {
         ul {
             list-style-type: none;
@@ -366,8 +368,6 @@
                                         @include make-col-ready(0);
                                         @include make-col(12);
                                         #message {
-                                            
-                                        
                                             @include media-breakpoint-up(md) {
                                                 @include make-col-ready(0);
                                                 @include make-col(8);
@@ -420,7 +420,6 @@
                             @include py(0);
                             @extend .card-title;
                         }
-         
                         .summary,
                         .comparison {
                             @extend .list-group;
@@ -455,46 +454,62 @@
             }
         }
         .consolidation.calculator {
-            .column-left {
-                @include make-col-ready(0);
-                @include make-col(12);
-                order:2;
+            .inner {
+                flex-direction: column;
                 @include media-breakpoint-up(md) {
-                    @include make-col(7);
-                    order:1;
-                    padding: 0 15px;
+                    flex-direction: row;
+                }
+                .intro {
+                    @include mb(4);
+                }
+                .intro,
+                .column-left {
+                    @include make-col-ready(0);
+                    @include make-col(12);
+                    order: 1;
+                    @include media-breakpoint-up(md) {
+                        @include make-col(7);
+                        order: 1;
+                        padding: 0 15px;
+                    }
+                }
+                .column-right {
+                    @include make-col-ready(0);
+                    @include make-col(12);
+                    order: 2;
+                    @include mb(4);
+                    @include media-breakpoint-up(md) {
+                        @include make-col(5);
+                        order: 3;
+                        padding: 0 15px;
+                    }
+                    .representative-example {
+                        margin-left: -1.25rem;
+                        margin-right: -1.25rem;
+                        @include media-breakpoint-up(md) {
+                   margin-left: inherit;
+                            margin-right: inherit;
+                    }
+                    }
+                }
+                .btn-apply {
+                    width: auto;
+                    @include mt(4);
+                    @include ml(auto);
                 }
             }
-            .column-right {
-                @include make-col-ready(0);
-                @include make-col(12);
-                order: 1;
-                @include media-breakpoint-up(md) {
-                    @include make-col(5);
-                    order:2;
-                                        padding: 0 15px;
-                }
-            }
-            .btn-apply {
-                width: auto;
-                @include mt(4);
-                @include ml(auto);
-            }
-        }
-                    
-        #consolidation {
+            #consolidation {}
             h6 {
                 font-weight: 800;
                 @include mb(1);
             }
-
             .header-row {
                 font-weight: 600;
                 @include mb(3);
                 white-space: nowrap;
             }
             .repeat-row {
-                                &:not(:first-child) {
+                &:not(:first-child) {
                     display: none
                 }
             }
@@ -507,13 +522,13 @@
                     @extend .form-control;
                     padding: 0.375rem;
                     @include media-breakpoint-up(md) {
-                     padding:0.375rem 0.75rem;
+                        padding: 0.375rem 0.75rem;
                     }
                 }
                 label {
                     font-size: 90%;
                     @include media-breakpoint-up(md) {
-                     font-size: 100%;   
+                        font-size: 100%;
                     }
                 }
                 .type {
@@ -577,9 +592,9 @@
                 .repayment-calc-label {
                     @include make-col-ready();
                     @include make-col(12);
-                           @include media-breakpoint-up(md) {
-                            @include make-col(8);
-                        }
+                    @include media-breakpoint-up(md) {
+                        @include make-col(8);
+                    }
                     padding-right: 5px;
                     padding-left: 5px;
                     display: flex;
@@ -593,22 +608,22 @@
                     @include make-col-ready();
                     @include make-col(5);
                     @include mt(3);
-                      @include media-breakpoint-up(md) {
-                            @include make-col(3);
-                          @include mt(0);
-                        }
+                    @include media-breakpoint-up(md) {
+                        @include make-col(3);
+                        @include mt(0);
+                    }
                     padding-right: 5px;
                     padding-left: 5px;
                 }
             }
             .mobile-btn-row {
-                 @include make-col-ready();
-                    @include make-col(12);
+                @include make-col-ready();
+                @include make-col(12);
                 padding: 0 5px;
                 @include mt(4);
                 @include media-breakpoint-up(md) {
-                          display: none;
-                        }
+                    display: none;
+                }
                 a {
                     @extend .btn;
                     @extend .btn-secondary;
@@ -616,20 +631,21 @@
             }
         }
     }
-#infoLegal {
     
-    @include make-container();
-    ul {
-        font-size: 14px;
-    list-style-type: inherit;
-        margin-left: 1.5rem;
-    li {
-        margin-bottom: 0.75rem;
+    #infoLegal {
+        @include make-container();
+        ul {
+            font-size: 14px;
+            list-style-type: inherit;
+            margin-left: 1.5rem;
+            li {
+                margin-bottom: 0.75rem;
+            }
+        }
+        p {
+            padding-bottom: 1rem;
+        }
     }
-    
-    }p {
-        padding-bottom: 1rem;
-    }}
     /*! purgecss start ignore */
     
     .modal .modal-content {
