--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -487,9 +487,9 @@
                         margin-left: -1.25rem;
                         margin-right: -1.25rem;
                         @include media-breakpoint-up(md) {
-                   margin-left: inherit;
+                            margin-left: inherit;
                             margin-right: inherit;
-                    }
+                        }
                     }
                 }
                 .btn-apply {
@@ -634,6 +634,10 @@
     
     #infoLegal {
         @include make-container();
+        overflow: scroll;
+        top: 80px;
+        height: calc(100vh - 80px);
+        overflow-y: auto;
         ul {
             font-size: 14px;
             list-style-type: inherit;
@@ -650,7 +654,7 @@
     
     .modal .modal-content {
         border: none;
-        box-shadow: none
+        box-shadow: none;
     }
     
     .modal-backdrop {
